fixed alignment

--- a/Advantour-details/style.css
+++ b/Advantour-details/style.css
@@ -159,10 +159,11 @@ ion-icon {
   position: absolute;
   background : rgba(255, 254, 254, 0.747);
   font-size :  20px;
-  top : 50%;
+  top : 60%;
   left : 50%;
   color : rgb(235, 0, 39);
   padding : 5px;
+
 
   transform: translate(-50% , -50%);
 
